--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "repository": "",
   "author": "Sandor Zelei",
   "dependencies": {
-    "express": "~3.2.4"
+    "express": "~3.2.4",
+    "passport": "~0.2.0",
+    "passport-facebook": "~1.0.2",
+    "passport-twitter": "~1.0.2",
+    "passport-github": "~0.1.5",
+    "passport-google": "~0.3.0",
+    "ect": "0.5.2",
+    "mongodb": "~1.3.23",
+    "mongoose": "~3.8.7"
   }
 }
